--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
+.idea/
 lib/
 lib64/
 parts/
@@ -123,3 +124,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# weights and cudnn
+cudnn-10.1-windows10-x64-v7.6.5.32.zip
+.pt
+.h5
